fixed gap between nav items

--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -44,7 +44,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  gap: 4rem;
+  /* gap: 4rem; */
   list-style: none;
   align-items: center;
   margin-bottom: 4rem;
